--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 </head>
 <body>
 
-<div class="container">
+<div class="text-container">
     <h2 class="text-center">Công cụ Xử lý Text</h2>
 
     <!-- Tabs điều hướng -->
