--- a/index.html
+++ b/index.html
@@ -64,9 +64,7 @@
             border-radius: 8px;
             font-size: 1.1em;
         }
-    </style>
-
-        textarea {
+  
             width: 100%;
             padding: 10px;
             font-size: 1em;
@@ -120,7 +118,7 @@
 </head>
 <body>
 
-<div class="text-container">
+<div class="container">
     <h2 class="text-center">Công cụ Xử lý Text</h2>
 
     <!-- Tabs điều hướng -->
