--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div class="tab-pane fade show active" id="cut" role="tabpanel" aria-labelledby="cut-tab">
             <form>
                 <div class="form-group">
-                    <label for="cutInput">Nội dung cần cắt</label>
+                    <label for="cutInput"></label>
                     <textarea id="cutInput" rows="5" class="form-control" placeholder="Nhập nội dung cần cắt..."></textarea>
                 </div>
 
@@ -178,7 +178,7 @@
         <div class="tab-pane fade" id="remove-duplicates" role="tabpanel" aria-labelledby="remove-duplicates-tab">
             <form>
                 <div class="form-group">
-                    <label for="filterInput">Nội dung cần lọc</label>
+                    <label for="filterInput"></label>
                     <textarea id="filterInput" rows="5" class="form-control" placeholder="Nhập nội dung cần lọc trùng..."></textarea>
                 </div>
 
@@ -222,8 +222,8 @@
         <div class="tab-pane fade" id="filter" role="tabpanel" aria-labelledby="filter-tab">
             <form>
                 <div class="form-group">
-                    <label for="inputText">Nội dung cần lọc</label>
-                    <textarea id="inputText" rows="5" class="form-control" placeholder="Nhập nội dung tại đây..."></textarea>
+                    <label for="inputText"></label>
+                    <textarea id="inputText" rows="5" class="form-control" placeholder="Nhập nội dung cần lọc.."></textarea>
                 </div>
 
                 <!-- Các từ cần lọc -->
@@ -249,7 +249,7 @@
             <form>
                 <div class="totp-section">
                     <div class="form-group">
-                        <label for="secret-key">Nhập hoặc dán Key 2FA</label>
+                        <label for="secret-key"></label>
                         <textarea id="secret-key" rows="5" class="form-control" placeholder="Nhập hoặc dán Key 2FA..."></textarea>
                     </div>
 <center>
