--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                     </div>
 <center>
                     <p><strong id="auth-code"></strong></p>
-                            <span class="countdown" id="countdown">Thời gian còn lại: 30s</span>
+                            <span class="countdown" id="countdown"></span>
 
                     <button type="button" onclick="clearInput()" class="btn btn-danger">Xóa</button>
                 </div>
