--- a/check.html
+++ b/check.html
@@ -4,25 +4,155 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kiểm Tra Email qua Proxy</title>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
     <style>
-        body {
+        /* Cấu trúc chung */
+        html {
+            padding-bottom: 120px;
+            min-height: 100%;
+            box-sizing: border-box;
+            position: relative;
             font-family: Arial, sans-serif;
-            margin: 20px;
         }
-        #results {
-            margin-top: 20px;
+
+        body {
+            color: #494949;
+            font-size: 1.1em;
+            background-color: #fefefe;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            min-height: 100vh;
         }
-        .result {
+
+        .content {
+            width: 100%;
+            max-width: 1200px;
+            padding: 20px;
+        }
+
+        h1 {
+            text-align: center;
+            font-size: 2.5em;
+            color: #333;
+            margin-bottom: 30px;
+        }
+
+        /* Khung form */
+        form {
+            background: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        textarea, select, input[type="submit"] {
+            width: 100%;
+            margin-bottom: 20px;
+            padding: 10px;
+            font-size: 1em;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            box-sizing: border-box;
+        }
+
+        textarea {
+            resize: vertical;
+            min-height: 120px;
+        }
+
+        select {
+            background-color: #f9f9f9;
+        }
+
+        input[type="submit"] {
+            background-color: #51c7f9;
+            color: white;
+            border: none;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        input[type="submit"]:hover {
+            background-color: #08a9ed;
+        }
+
+        /* Khu vực hiển thị proxy */
+        .proxy-container {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 30px;
+        }
+
+        .proxy-box {
+            width: 48%;
+            background-color: #fff;
+            padding: 15px;
+            border-radius: 5px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .proxy-box h5 {
+            margin-bottom: 10px;
+            font-size: 1.2em;
+            color: #333;
+        }
+
+        .proxy-box textarea {
+            font-family: monospace;
+            font-size: 1em;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            background-color: #f9f9f9;
+            resize: none;
+        }
+
+        .btn-copy {
+            display: inline-block;
+            margin-top: 10px;
+            padding: 8px 12px;
+            background-color: #28a745;
+            color: white;
+            border-radius: 5px;
+            text-decoration: none;
+        }
+
+        .btn-copy:hover {
+            background-color: #218838;
+        }
+
+        /* Thông báo thành công */
+        .toast {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            padding: 10px;
+            background: #4CAF50;
+            color: #fff;
+            border-radius: 5px;
+            font-size: 14px;
+            display: none;
+            z-index: 9999;
+        }
+
+        /* Phản hồi từ các proxy */
+        .live-heading, .die-heading {
+            font-size: 1.3em;
+            font-weight: bold;
+            text-align: center;
             margin-bottom: 10px;
         }
-        .success {
-            color: green;
+
+        .live-heading {
+            color: #28a745;
         }
-        .failure {
-            color: red;
-        }
-        .loading {
-            color: blue;
+
+        .die-heading {
+            color: #dc3545;
         }
     </style>
 </head>
