--- a/check.html
+++ b/check.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Check Facebook UID Location</title>
+    <title>Check Mail Có Liên Kết</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
     <style>
         body {
@@ -58,118 +58,6 @@
             background-color: #e9ecef;
             border-radius: 8px;
             font-size: 1.1em;
-        }
-    </style><style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f9;
-            color: #333;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-
-        .container {
-            background-color: #fff;
-            padding: 30px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            width: 80%;
-            max-width: 900px;
-        }
-
-        h2 {
-            color: #4CAF50;
-            text-align: center;
-            font-size: 24px;
-            margin-bottom: 20px;
-        }
-
-        h3 {
-            color: #444;
-            margin-top: 30px;
-            font-size: 20px;
-        }
-
-        form {
-            margin-bottom: 20px;
-        }
-
-        textarea {
-            width: 100%;
-            padding: 12px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            font-size: 14px;
-            box-sizing: border-box;
-            resize: vertical;
-        }
-
-        button {
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            padding: 12px 20px;
-            font-size: 16px;
-            border-radius: 4px;
-            cursor: pointer;
-            margin-top: 15px;
-            width: 100%;
-        }
-
-        button:hover {
-            background-color: #45a049;
-        }
-
-        #result-container {
-            margin-top: 20px;
-            font-size: 16px;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            background-color: #f9f9f9;
-        }
-
-        .proxy-list {
-            width: 100%;
-            padding: 12px;
-            font-size: 14px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            background-color: #f1f1f1;
-            resize: vertical;
-            height: 150px;
-            margin-top: 10px;
-            margin-bottom: 10px;
-            font-family: monospace;
-        }
-
-        @media (max-width: 600px) {
-            .container {
-                padding: 15px;
-                width: 100%;
-            }
-
-            textarea {
-                font-size: 12px;
-                padding: 8px;
-            }
-
-            button {
-                padding: 10px;
-                font-size: 14px;
-            }
-
-            h2 {
-                font-size: 20px;
-            }
-
-            h3 {
-                font-size: 18px;
-            }
         }
     </style>
 </head>
