--- a/check.html
+++ b/check.html
@@ -67,7 +67,7 @@
 <body>
 
         <div class="container">
-    <h1>Kiểm Tra Email qua Proxy</h1>
+    <h1>Check Mail Có Liên Kết</h1>
     <textarea id="emailList" rows="10" cols="50" placeholder="Nhập danh sách email, mỗi email cách nhau bằng dấu phẩy hoặc xuống dòng..."></textarea>
     <br><br>
     <button onclick="startChecking()">Kiểm Tra</button>
