--- a/giaima.html
+++ b/giaima.html
@@ -64,7 +64,7 @@
     <script src="https://cdn.jsdelivr.net/npm/prettier@2.8.3/parser-babel.js"></script>
 </head>
 <body>
-    <div class="container">
+    <div class="text-center-container">
         <h2>Giải Mã Mã JavaScript và Sao Chép</h2>
         
         <!-- Nhập mã JavaScript cần giải mã -->
