--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   </style>
 </head>
 <body>
-  <div class="container">
+  <div class="text-container">
     <h2 class="text-center">Công cụ Xử lý Text và Lấy Mã 2FA</h2>
 
     <!-- Navigation Tabs -->
