--- a/page.html
+++ b/page.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Facebook Page Checker</title>
+  <title>Facebook Token Checker</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -20,17 +20,17 @@
   </style>
 </head>
 <body class="container py-5">
-  <h2 class="mb-4 text-center">✅ Công Cụ Check Page</h2>
+  <h2 class="mb-4 text-center">✅ Công Cụ Check Token Facebook</h2>
   <div class="mb-4">
-
-    <textarea id="tokens" class="form-control" rows="5" placeholder="🔑 Dán danh sách Token (1 dòng 1 token):..."></textarea>
+    <label for="tokens" class="form-label">🔑 Dán danh sách Token (1 dòng 1 token):</label>
+    <textarea id="tokens" class="form-control" rows="5" placeholder="EAA..."></textarea>
   </div>
   <button onclick="runScript()" class="btn btn-success w-100 mb-4">▶️ Bắt đầu kiểm tra</button>
   <div id="output"></div>
   <script>
     async function runScript() {
       const tokensTextarea = document.getElementById('tokens');
-      const accessTokens = tokensTextarea.value.trim().split('\n').map(t => t.trim()).filter(t => t !== '');
+      const accessTokens = tokensTextarea.value.trim().split('\\n').map(t => t.trim()).filter(t => t !== '');
       const outputDiv = document.getElementById('output');
       outputDiv.innerHTML = '';
 
